@@ -9,7 +9,7 @@
 // -------------------------------------------
 // This file is part of eCos, the Embedded Configurable Operating System.
 // Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
-// Copyright (C) 2002 Gary Thomas
+// Copyright (C) 2002, 2003 Gary Thomas
 //
 // eCos is free software; you can redistribute it and/or modify it under
 // the terms of the GNU General Public License as published by the Free
@@ -65,6 +65,8 @@ extern char *http_error(int err);
 #define HTTP_BADHDR   1   // Invalid HTTP header (response)
 #define HTTP_OPEN     2   // Problems opening connection
 #define HTTP_IO       3   // Misc I/O problems
+#define HTTP_BADREQ   4   // Bad request
+#define HTTP_NOFILE   5   // No such file
 
 extern getc_io_funcs_t http_io;
 #endif // _HTTP_H_
